--- a/configs/mythic-100m/mythic100m-test.yaml
+++ b/configs/mythic-100m/mythic100m-test.yaml
@@ -76,6 +76,7 @@ tokenizer:
   identifier: allenai/OLMo-2-1124-7B
   truncate_direction: right
 
+save_folder: /mnt/seagate/checkpoints/tests
 save_overwrite: false
 
 save_interval: 1000
@@ -89,7 +90,7 @@ save_num_unsharded_checkpoints_to_keep: -1
 load_path: null
 
 max_duration: 1ep
-global_train_batch_size: 1024
+global_train_batch_size: 1023
 device_train_microbatch_size: 2
 
 precision: amp_bf16
