--- a/configs/mythic-100m/mythic100m-test.yaml
+++ b/configs/mythic-100m/mythic100m-test.yaml
@@ -77,7 +77,7 @@ tokenizer:
   truncate_direction: right
 
 save_folder: /mnt/disk3/checkpoints/tests
-save_overwrite: false
+save_overwrite: true
 
 save_interval: 1000
 save_interval_ephemeral: 250
