--- a/configs/mythic-100m/mythic100m-test.yaml
+++ b/configs/mythic-100m/mythic100m-test.yaml
@@ -1,6 +1,6 @@
 run_name: mythic100m-test
 seed: 6198
-dry_run: true
+dry_run: false
 
 wandb:
   project: mythic-100m
@@ -22,7 +22,7 @@ model:
   alibi: false
   rope: true
   rope_theta: 500000
-  flash_attention: true
+  flash_attention: false
   attention_dropout: 0.0
   include_bias: false
   block_type: sequential
@@ -203,7 +203,7 @@ data:
   pin_memory: true
   prefetch_factor: 8
   persistent_workers: true
-  memmap_dtype: uint32
+  memmap_dtype: uint16
   timeout: 0
   instance_filter:
     repetition_max_period: 13
