--- a/configs/mythic-100m/mythicvr-olmo-mix.yaml
+++ b/configs/mythic-100m/mythicvr-olmo-mix.yaml
@@ -67,10 +67,12 @@ optimizer:
 scheduler:
   name: cosine_with_warmup
   units: tokens
-  t_warmup: 8388608000
-  t_max: 5e12
+  t_warmup: 2000000000
+  t_max: 100000000000
   alpha_f: 0.1
   warmup_min_lr: 0.0
+
+max_duration: 2ep
 
 tokenizer:
   identifier: allenai/OLMo-2-1124-7B
@@ -89,7 +91,6 @@ save_num_unsharded_checkpoints_to_keep: -1
 
 load_path: null
 
-max_duration: 1ep
 global_train_batch_size: 1023
 device_train_microbatch_size: 2
 
